done with auth + owner_map setup

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">SparePark</string>
+    <string name="app_name">SparesPark</string>
     <string name="title_activity_owner_map">OwnerMap</string>
 </resources>
